data/src/objects/Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SOR__c</fullName>
        <label>SOR</label>
        <picklist>
            <picklistValues>
                <fullName>OPENforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iCLIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoGroup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Security_Classification__c</fullName>
        <label>Security Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MetaData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>